--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4715,6 +4715,48 @@ a {
   background-color: #000000;
   overflow: hidden;
 }
+.cid-tgoO9J5Hum {
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+  background-color: #290948;
+}
+.cid-tgoO9J5Hum img,
+.cid-tgoO9J5Hum .item-img {
+  width: 100%;
+}
+.cid-tgoO9J5Hum .item:focus,
+.cid-tgoO9J5Hum span:focus {
+  outline: none;
+}
+.cid-tgoO9J5Hum .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+  position: relative;
+}
+.cid-tgoO9J5Hum .item-wrapper {
+  position: unset;
+  border-radius: 4px;
+  background: #000000;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tgoO9J5Hum .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tgoO9J5Hum .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tgoO9J5Hum .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tgoO9J5Hum .mbr-section-title {
+  color: #232323;
+}
 .cid-teKN2a1jGU {
   padding-top: 0rem;
   padding-bottom: 0rem;
