--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4715,8 +4715,50 @@ a {
   background-color: #000000;
   overflow: hidden;
 }
+.cid-tgKdaZg9Tl {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #ffffff;
+}
+.cid-tgKdaZg9Tl img,
+.cid-tgKdaZg9Tl .item-img {
+  width: 100%;
+}
+.cid-tgKdaZg9Tl .item:focus,
+.cid-tgKdaZg9Tl span:focus {
+  outline: none;
+}
+.cid-tgKdaZg9Tl .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+  position: relative;
+}
+.cid-tgKdaZg9Tl .item-wrapper {
+  position: unset;
+  border-radius: 4px;
+  background: #ffffff;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tgKdaZg9Tl .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tgKdaZg9Tl .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tgKdaZg9Tl .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tgKdaZg9Tl .mbr-section-title {
+  color: #232323;
+}
 .cid-tgoO9J5Hum {
-  padding-top: 2rem;
+  padding-top: 1rem;
   padding-bottom: 3rem;
   background-color: #290948;
 }
@@ -4736,7 +4778,7 @@ a {
 .cid-tgoO9J5Hum .item-wrapper {
   position: unset;
   border-radius: 4px;
-  background: #000000;
+  background: #290948;
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -5292,50 +5334,6 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
-}
-.cid-tgoryqhRZ4 {
-  padding-top: 2rem;
-  padding-bottom: 1rem;
-  background-color: #290948;
-}
-.cid-tgoryqhRZ4 img,
-.cid-tgoryqhRZ4 .item-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.cid-tgoryqhRZ4 .item:focus,
-.cid-tgoryqhRZ4 span:focus {
-  outline: none;
-}
-.cid-tgoryqhRZ4 .item {
-  cursor: pointer;
-  margin-bottom: 2rem;
-  position: relative;
-}
-.cid-tgoryqhRZ4 .item-wrapper {
-  position: unset;
-  border-radius: 4px;
-  background: #290948;
-  height: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-}
-@media (min-width: 992px) {
-  .cid-tgoryqhRZ4 .item-wrapper .item-content {
-    padding: 2rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-tgoryqhRZ4 .item-wrapper .item-content {
-    padding: 1rem;
-  }
-}
-.cid-tgoryqhRZ4 .mbr-section-btn {
-  margin-top: auto !important;
-}
-.cid-tgoryqhRZ4 .mbr-section-title {
-  color: #232323;
 }
 .cid-teYHrjJlKs {
   padding-top: 30px;
