--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1426,6 +1426,277 @@ a {
   background-color: #000000;
   overflow: hidden;
 }
+.cid-tjnBUks93W {
+  padding-top: 3rem;
+  padding-bottom: 1rem;
+  background-color: #a78800;
+}
+.cid-tjnBUks93W .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tjnBUks93W .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tjnBUks93W .item {
+  padding-bottom: 2rem;
+}
+.cid-tjnBUks93W .item-wrapper {
+  height: 100%;
+  position: relative;
+}
+.cid-tjnBUks93W .item-wrapper img {
+  height: 100%;
+  object-fit: cover;
+}
+.cid-tjnBUks93W .item-wrapper .icon-wrapper {
+  pointer-events: none;
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  font-size: 22px;
+  left: 50%;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  opacity: 0;
+  color: #ffffff;
+  transform: translateX(-50%) translateY(-50%);
+  background-color: #1b1b1b;
+  transition: 0.2s;
+}
+.cid-tjnBUks93W .item-wrapper:hover .icon-wrapper {
+  opacity: 0.7;
+}
+.cid-tjnBUks93W .carousel-control,
+.cid-tjnBUks93W .close {
+  background: #1b1b1b;
+}
+.cid-tjnBUks93W .carousel-control-prev {
+  margin-left: 2.5rem;
+}
+.cid-tjnBUks93W .carousel-control-prev span {
+  margin-right: 5px;
+}
+.cid-tjnBUks93W .carousel-control-next {
+  margin-right: 2.5rem;
+}
+.cid-tjnBUks93W .carousel-control-next span {
+  margin-left: 5px;
+}
+.cid-tjnBUks93W .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 22px;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  border: 2px solid #fff;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  font-family: 'Moririse2';
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-tjnBUks93W .close::before {
+  content: '\e91a';
+}
+.cid-tjnBUks93W .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-tjnBUks93W .carousel-control {
+  display: flex;
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-tjnBUks93W .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-tjnBUks93W .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-tjnBUks93W .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-tjnBUks93W .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 3px;
+}
+.cid-tjnBUks93W .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-tjnBUks93W .carousel-indicators li.active,
+.cid-tjnBUks93W .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-tjnBUks93W .carousel-indicators li::after,
+.cid-tjnBUks93W .carousel-indicators li::before {
+  content: none;
+}
+.cid-tjnBUks93W .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-tjnBUks93W .carousel-indicators {
+    display: none !important;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tjnBUks93W .carousel-indicators {
+    margin-bottom: 3.625rem !important;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tjnBUks93W .carousel-indicators {
+    display: none;
+  }
+}
+.cid-tjnBUks93W .carousel-inner {
+  display: flex;
+  align-items: center;
+}
+.cid-tjnBUks93W .carousel-inner > .active {
+  display: block;
+}
+.cid-tjnBUks93W .carousel-control.left {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-tjnBUks93W .carousel-control.right {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-tjnBUks93W .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 768px) {
+  .cid-tjnBUks93W .carousel-control,
+  .cid-tjnBUks93W .carousel-indicators,
+  .cid-tjnBUks93W .modal .close {
+    position: fixed;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tjnBUks93W .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 20px;
+  }
+  .cid-tjnBUks93W .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-tjnBUks93W .carousel-indicators .active,
+.cid-tjnBUks93W .carousel-indicators li {
+  width: 7px;
+  height: 7px;
+  margin: 3px;
+  background: #000000;
+  opacity: 0.5;
+  border: 4px solid #000000;
+}
+.cid-tjnBUks93W .carousel-indicators .active {
+  background: #fff;
+}
+.cid-tjnBUks93W .carousel-indicators li {
+  max-width: 15px;
+  max-height: 15px;
+  border-radius: 50%;
+}
+.cid-tjnBUks93W .modal {
+  padding-left: 0 !important;
+  position: fixed;
+  overflow: hidden;
+  padding-right: 0 !important;
+}
+.cid-tjnBUks93W .modal-dialog {
+  margin: 0 auto;
+  max-width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-tjnBUks93W .modal-content {
+  border-radius: 0;
+  border: none;
+  background: transparent;
+}
+.cid-tjnBUks93W .modal-body {
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+.cid-tjnBUks93W .modal-body img {
+  width: 100%;
+  object-fit: contain;
+  max-height: calc(100vh - 1.75rem);
+}
+.cid-tjnBUks93W .carousel {
+  width: 100%;
+}
+.cid-tjnBUks93W .modal-backdrop.in {
+  opacity: 0.8;
+}
+.cid-tjnBUks93W .modal.fade .modal-dialog {
+  transition: margin-top 0.3s ease-out;
+}
+.cid-tjnBUks93W .modal.fade .modal-dialog,
+.cid-tjnBUks93W .modal.in .modal-dialog {
+  transform: none;
+}
+.cid-tjnBUks93W .mbr-gallery .item-wrapper {
+  cursor: pointer;
+}
+.cid-tjnBUks93W H6 {
+  text-align: center;
+}
+.cid-tjnBUks93W H3 {
+  color: #ffffff;
+}
 .cid-tdUfP5ngkC {
   padding-top: 3rem;
   padding-bottom: 1rem;
@@ -3817,141 +4088,6 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
-}
-.cid-tfwcPQXHtG {
-  padding-top: 3rem;
-  padding-bottom: 2rem;
-  background-color: #a30074;
-}
-.cid-tfwcPQXHtG img,
-.cid-tfwcPQXHtG .item-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.cid-tfwcPQXHtG .item:focus,
-.cid-tfwcPQXHtG span:focus {
-  outline: none;
-}
-.cid-tfwcPQXHtG .item-wrapper {
-  position: relative;
-}
-.cid-tfwcPQXHtG .slide-content {
-  position: relative;
-  border-radius: 4px;
-  background: #a30074;
-  height: 100%;
-  display: flex;
-  overflow: hidden;
-  flex-flow: column nowrap;
-}
-@media (min-width: 992px) {
-  .cid-tfwcPQXHtG .slide-content .item-content {
-    padding: 2rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-tfwcPQXHtG .slide-content .item-content {
-    padding: 1rem;
-  }
-}
-.cid-tfwcPQXHtG .mbr-section-btn {
-  margin-top: auto !important;
-}
-.cid-tfwcPQXHtG .mbr-section-title {
-  color: #232323;
-}
-.cid-tfwcPQXHtG .mbr-text,
-.cid-tfwcPQXHtG .mbr-section-btn {
-  text-align: left;
-}
-.cid-tfwcPQXHtG .item-title {
-  text-align: left;
-}
-.cid-tfwcPQXHtG .item-subtitle {
-  text-align: left;
-}
-.cid-tfwcPQXHtG .embla__slide {
-  display: flex;
-  justify-content: center;
-  position: relative;
-  min-width: 410px;
-  max-width: 410px;
-}
-@media (max-width: 768px) {
-  .cid-tfwcPQXHtG .embla__slide {
-    min-width: 70%;
-    max-width: initial;
-    margin-left: 1rem !important;
-    margin-right: 1rem !important;
-  }
-}
-.cid-tfwcPQXHtG .embla__button--next,
-.cid-tfwcPQXHtG .embla__button--prev {
-  display: flex;
-}
-.cid-tfwcPQXHtG .embla__button {
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-@media (max-width: 768px) {
-  .cid-tfwcPQXHtG .embla__button {
-    display: none;
-  }
-}
-.cid-tfwcPQXHtG .embla__button:disabled {
-  cursor: default;
-  display: none;
-}
-.cid-tfwcPQXHtG .embla__button:hover {
-  background: #000;
-  color: rgba(255, 255, 255, 0.5);
-}
-.cid-tfwcPQXHtG .embla__button.embla__button--prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-tfwcPQXHtG .embla__button.embla__button--next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-tfwcPQXHtG .embla__button {
-    top: auto;
-  }
-}
-.cid-tfwcPQXHtG .embla {
-  position: relative;
-  width: 100%;
-}
-.cid-tfwcPQXHtG .embla__viewport {
-  overflow: hidden;
-  width: 100%;
-}
-.cid-tfwcPQXHtG .embla__viewport.is-draggable {
-  cursor: grab;
-}
-.cid-tfwcPQXHtG .embla__viewport.is-dragging {
-  cursor: grabbing;
-}
-.cid-tfwcPQXHtG .embla__container {
-  display: flex;
-  user-select: none;
-  -webkit-touch-callout: none;
-  -khtml-user-select: none;
-  -webkit-tap-highlight-color: transparent;
 }
 .cid-teXgbvs3Vw {
   padding-top: 3rem;
