--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4803,7 +4803,7 @@ a {
 .cid-tgKdaZg9Tl {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 .cid-tgKdaZg9Tl img,
 .cid-tgKdaZg9Tl .item-img {
@@ -4821,7 +4821,7 @@ a {
 .cid-tgKdaZg9Tl .item-wrapper {
   position: unset;
   border-radius: 4px;
-  background: #ffffff;
+  background: #000000;
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -4842,180 +4842,46 @@ a {
 .cid-tgKdaZg9Tl .mbr-section-title {
   color: #232323;
 }
-.cid-tgoO9J5Hum {
+.cid-tmTWAKqA0j {
   padding-top: 1rem;
-  padding-bottom: 3rem;
-  background-color: #290948;
-}
-.cid-tgoO9J5Hum img,
-.cid-tgoO9J5Hum .item-img {
-  width: 100%;
-}
-.cid-tgoO9J5Hum .item:focus,
-.cid-tgoO9J5Hum span:focus {
-  outline: none;
-}
-.cid-tgoO9J5Hum .item {
-  cursor: pointer;
-  margin-bottom: 2rem;
-  position: relative;
-}
-.cid-tgoO9J5Hum .item-wrapper {
-  position: unset;
-  border-radius: 4px;
-  background: #290948;
-  height: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-}
-@media (min-width: 992px) {
-  .cid-tgoO9J5Hum .item-wrapper .item-content {
-    padding: 2rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-tgoO9J5Hum .item-wrapper .item-content {
-    padding: 1rem;
-  }
-}
-.cid-tgoO9J5Hum .mbr-section-btn {
-  margin-top: auto !important;
-}
-.cid-tgoO9J5Hum .mbr-section-title {
-  color: #232323;
-}
-.cid-teKN2a1jGU {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
-}
-.cid-teKN2a1jGU img,
-.cid-teKN2a1jGU .item-img {
-  width: 100%;
-}
-.cid-teKN2a1jGU .item:focus,
-.cid-teKN2a1jGU span:focus {
-  outline: none;
-}
-.cid-teKN2a1jGU .item {
-  cursor: pointer;
-  margin-bottom: 2rem;
-  position: relative;
-}
-.cid-teKN2a1jGU .row {
-  margin-left: 0;
-  margin-right: 0;
-}
-.cid-teKN2a1jGU .item {
-  padding: 0;
-  margin: 0;
-}
-.cid-teKN2a1jGU .item-wrapper {
-  position: unset;
-  border-radius: 4px;
-  background: #fafafa;
-  height: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-}
-@media (min-width: 992px) {
-  .cid-teKN2a1jGU .item-wrapper .item-content {
-    padding: 2rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-teKN2a1jGU .item-wrapper .item-content {
-    padding: 1rem;
-  }
-}
-.cid-teKN2a1jGU .mbr-section-btn {
-  margin-top: auto !important;
-}
-.cid-teKN2a1jGU .mbr-section-title {
-  color: #232323;
-}
-.cid-teKNqqyCD0 {
-  padding-top: 1rem;
-  padding-bottom: 0rem;
+  padding-bottom: 1rem;
   background-color: #000000;
 }
-.cid-teKNqqyCD0 img,
-.cid-teKNqqyCD0 .item-img {
+.cid-tmTWAKqA0j img,
+.cid-tmTWAKqA0j .item-img {
   width: 100%;
 }
-.cid-teKNqqyCD0 .item:focus,
-.cid-teKNqqyCD0 span:focus {
+.cid-tmTWAKqA0j .item:focus,
+.cid-tmTWAKqA0j span:focus {
   outline: none;
 }
-.cid-teKNqqyCD0 .item {
+.cid-tmTWAKqA0j .item {
   cursor: pointer;
   margin-bottom: 2rem;
   position: relative;
 }
-.cid-teKNqqyCD0 .item-wrapper {
+.cid-tmTWAKqA0j .item-wrapper {
   position: unset;
   border-radius: 4px;
-  background: #000000;
+  background: #ffffff;
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
 }
 @media (min-width: 992px) {
-  .cid-teKNqqyCD0 .item-wrapper .item-content {
+  .cid-tmTWAKqA0j .item-wrapper .item-content {
     padding: 2rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-teKNqqyCD0 .item-wrapper .item-content {
+  .cid-tmTWAKqA0j .item-wrapper .item-content {
     padding: 1rem;
   }
 }
-.cid-teKNqqyCD0 .mbr-section-btn {
+.cid-tmTWAKqA0j .mbr-section-btn {
   margin-top: auto !important;
 }
-.cid-teKNqqyCD0 .mbr-section-title {
-  color: #232323;
-}
-.cid-teKQz6rxF3 {
-  padding-top: 1rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
-}
-.cid-teKQz6rxF3 img,
-.cid-teKQz6rxF3 .item-img {
-  width: 100%;
-}
-.cid-teKQz6rxF3 .item:focus,
-.cid-teKQz6rxF3 span:focus {
-  outline: none;
-}
-.cid-teKQz6rxF3 .item {
-  cursor: pointer;
-  margin-bottom: 2rem;
-  position: relative;
-}
-.cid-teKQz6rxF3 .item-wrapper {
-  position: unset;
-  border-radius: 4px;
-  background: #fafafa;
-  height: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-}
-@media (min-width: 992px) {
-  .cid-teKQz6rxF3 .item-wrapper .item-content {
-    padding: 2rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-teKQz6rxF3 .item-wrapper .item-content {
-    padding: 1rem;
-  }
-}
-.cid-teKQz6rxF3 .mbr-section-btn {
-  margin-top: auto !important;
-}
-.cid-teKQz6rxF3 .mbr-section-title {
+.cid-tmTWAKqA0j .mbr-section-title {
   color: #232323;
 }
 .cid-teLpafleo6 {
